--- a/Pizza Calculator/packages.config
+++ b/Pizza Calculator/packages.config
@@ -1,10 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microcharts" version="0.7.1" targetFramework="monoandroid81" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="monoandroid81" />
   <package id="Newtonsoft.Json.Schema" version="3.0.10" targetFramework="monoandroid81" />
-  <package id="SkiaSharp" version="1.68.0" targetFramework="monoandroid81" />
-  <package id="SkiaSharp.Views" version="1.68.0" targetFramework="monoandroid81" />
+  <package id="Syncfusion.Licensing" version="16.4.0.52" targetFramework="monoandroid81" />
+  <package id="Syncfusion.Xamarin.SfChart.Android" version="16.4.0.52" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Arch.Core.Common" version="1.1.1.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Arch.Lifecycle.Common" version="1.1.1.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Arch.Lifecycle.Runtime" version="1.1.1.1" targetFramework="monoandroid81" />
