--- a/Pizza Calculator/Properties/AndroidManifest.xml
+++ b/Pizza Calculator/Properties/AndroidManifest.xml
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="Pizza_Calculator.Pizza_Calculator" android:versionCode="1" android:versionName="0.2" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27" />
-	<application android:allowBackup="true" android:label="@string/app_name" android:icon="@drawable/icon"></application>
+	<application android:allowBackup="true" android:label="@string/app_name" android:icon="@drawable/icon" android:theme="@style/Theme.AppCompat.Light"></application>
+  
 </manifest>
