--- a/Pizza Calculator/packages.config
+++ b/Pizza Calculator/packages.config
@@ -2,14 +2,16 @@
 <packages>
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="monoandroid81" />
   <package id="Newtonsoft.Json.Schema" version="3.0.10" targetFramework="monoandroid81" />
-  <package id="Syncfusion.Licensing" version="16.4.0.52" targetFramework="monoandroid81" />
-  <package id="Syncfusion.Xamarin.SfChart.Android" version="16.4.0.52" targetFramework="monoandroid81" />
+  <package id="Syncfusion.Licensing" version="16.4.0.54" targetFramework="monoandroid81" />
+  <package id="Syncfusion.Xamarin.SfChart.Android" version="16.4.0.54" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Arch.Core.Common" version="1.1.1.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Arch.Lifecycle.Common" version="1.1.1.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Arch.Lifecycle.Runtime" version="1.1.1.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="28.0.0.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.Annotations" version="28.0.0.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.Compat" version="28.0.0.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Constraint.Layout" version="1.1.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Constraint.Layout.Solver" version="1.1.2" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.Core.UI" version="28.0.0.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.Core.Utils" version="28.0.0.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.Design" version="28.0.0.1" targetFramework="monoandroid81" />
