--- a/Pizza Calculator/packages.config
+++ b/Pizza Calculator/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="monoandroid81" />
   <package id="Newtonsoft.Json.Schema" version="3.0.10" targetFramework="monoandroid81" />
+  <package id="Refractored.FloatingActionButton" version="2.1.0" targetFramework="monoandroid81" />
   <package id="Syncfusion.Licensing" version="16.4.0.54" targetFramework="monoandroid81" />
   <package id="Syncfusion.Xamarin.SfChart.Android" version="16.4.0.54" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Arch.Core.Common" version="1.1.1.1" targetFramework="monoandroid81" />
