--- a/Pizza Calculator/packages.config
+++ b/Pizza Calculator/packages.config
@@ -13,12 +13,14 @@
   <package id="Xamarin.Android.Support.Compat" version="28.0.0.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.Constraint.Layout" version="1.1.2" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.Constraint.Layout.Solver" version="1.1.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.CoordinaterLayout" version="28.0.0.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.Core.UI" version="28.0.0.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.Core.Utils" version="28.0.0.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.Design" version="28.0.0.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.Fragment" version="28.0.0.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.Media.Compat" version="28.0.0.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.Transition" version="28.0.0.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.v4" version="28.0.0.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.v7.AppCompat" version="28.0.0.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.v7.CardView" version="28.0.0.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="28.0.0.1" targetFramework="monoandroid81" />
