--- a/Pizza Calculator/Properties/AndroidManifest.xml
+++ b/Pizza Calculator/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="Pizza_Calculator.Pizza_Calculator" android:versionCode="1" android:versionName="1.0.1" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="Pizza_Calculator.Pizza_Calculator" android:versionCode="1" android:versionName="1.0.2" android:installLocation="internalOnly">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27" />
 	<application android:allowBackup="true" android:label="@string/app_name" android:icon="@mipmap/ic_launcher"></application>
 </manifest>
